--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,61 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.app {
   text-align: center;
+  height: 100vh;
+  background-color: antiquewhite;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.app__navbar {
+  border-bottom: 6px solid red;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 15px 0 45px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__navbar__title {
+  margin-top: 10px;
+}
+.app__navbar__icon {
+  margin: 10px 30px 10px 5px;
+}
+.app__itemsList {
+  margin: 2% 15% 0 15%;
+  height: 100vh;
+  overflow: auto;
+  display: grid;
+  grid-template-columns: 250px 250px 250px;
+  grid-template-rows: 300px 300px 300px 300px 300px;
+  grid-gap: 15px;
+}
+.card {
+  border: 1px solid black;
+  margin: 0 auto;
+  display: block;
+  /* height: 350px; */
+  /* width: 250px; */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.card__img {
+  background-size: cover;
+  border-bottom: 3px solid antiquewhite;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card__img img {
+  width: 100%;
+}
+.card__description {
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  height: 10%;
 }
