--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,8 @@ a {
   margin-top: 10px;
 }
 .app__navbar__icon {
-  margin: 10px 30px 10px 5px;
+  display: block;
+  margin: 20px 30px 0px 5px;
 }
 .app__itemsList {
   margin: 0 auto;
@@ -107,7 +108,7 @@ a {
 }
 .article__img {
   display: flex;
-  width: 90%;
+  width: 220%;
 }
 .article__img img {
   width: 100%;
